--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -14,6 +14,7 @@
     "removeComments": true,
     "isolatedModules": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
