--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,8 +25,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^15.5.4",
     "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
