add testing for vacancy controller

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -18,7 +18,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
-    "types": ["node", "validator"]
+    "types": ["node", "validator", "jest"]
   },
   "include": ["src/**/*.ts", "prisma/**/*.ts"],
   "exclude": ["node_modules", "dist"]
