fix backend lint errors
- Add proper TypeScript types to vacancy module (repository, use cases, controller)
- Fix jwt.strategy.ts passport-jwt typing issues with eslint-disable
- Fix floating promise in main.ts with void operator
- Fix unused variable in get-profile.usecase.ts
- Add test folder to tsconfig.json for e2e tests
- Fix supertest typing issues in app.e2e-spec.ts

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -20,6 +20,6 @@
     "noImplicitAny": false,
     "types": ["node", "validator"]
   },
-  "include": ["src/**/*.ts", "prisma/**/*.ts"],
+  "include": ["src/**/*.ts", "prisma/**/*.ts", "test/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
