--- a/apps/backend/tsconfig.spec.json
+++ b/apps/backend/tsconfig.spec.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "types": ["node", "jest"]
   },
-  "include": ["**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src/**/*.spec.ts", "src/**/*.test.ts", "test/**/*.ts"]
 }
